Thu Dec  8 11:37:29 CET 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SwapEdge.java: New algorithm to swap an edge if its adjacent faces are coplanar.

Fri Dec  2 18:30:07 CET 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java
	  src/org/jcae/mesh/amibe/ds/OTriangle.java:  Move Vertex.findOTriangle() into OTriangle.find().

Wed Nov 30 15:18:48 CET 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/QuadTree.java
	* src/org/jcae/mesh/amibe/util/QuadTreeTest.java: Rename QuadTree.QuadTreeCell into QuadTree.Cell
	* src/org/jcae/mesh/amibe/util/Octree.java
	* src/org/jcae/mesh/amibe/util/OctreeTest.java: Rename Octree.OctreeCell into Octree.Cell
	* src/org/jcae/mesh/amibe/util/Octree.java
	  src/org/jcae/mesh/amibe/util/QuadTree.java: Fix offset by one for nCells.
	* src/org/jcae/mesh/amibe/util/Octree.java: Enlarge bounding box to make sure that all nodes are interior.
	* src/org/jcae/mesh/amibe/util/Octree.java (getNearVertexInSubOctrees): Fix computation of initial target size.

Tue Nov 29 17:47:22 CET 2005 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Vertex.java (discreteAverageNormal): Use area weighting.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (discreteProject): Get mean normal from discreteAverageNormal() instead of discreteCurvatures(), it seems too be much more reliable.
	* src/org/jcae/mesh/amibe/algos3d/SplitEdge.java: Use a new implementation of AVL binary trees.
	* src/org/jcae/mesh/amibe/util/QuadTree.java
	* src/org/jcae/mesh/amibe/ds/Mesh.java:  Remove the mesh attribute from QuadTree, and replace it by a Calculus instance, which is all that is needed to compute distances between vertices.

Tue Nov 29 12:22:39 CET 2005 Denis Barbier <barbier@users.sourceforge.net>
